Revision history for {{$dist->name}}

{{$NEXT}}

1.29      2014-12-20 05:30:41 -0500
  - update my dists to latest

1.28      2014-12-19 12:47:24 -0500
  - remove merged dist PlugAuth::Lite

1.27      2014-12-19 12:12:03 -0500
  - remove merged dist PlugAuth::Client
  - remove merged dist PlugAuth::Plugin::Admin
  - remove merged dist Yars::Client
  - update my dists to latest

1.26      2014-11-19 15:23:37 -0500
  - add Alien::bison
  - add Alien::m4
  - update my dists to latest  

1.25      2014-11-09 10:28:01 -0500
  - update my dists to latest

1.24      2014-11-06 06:19:37 -0500
  - remove some skips for OS X

1.23      2014-11-05 22:59:53 -0500
  - update my dists to latest  

1.22      2014-11-05 22:53:01 -0500
  - add some skips for OS X

1.21      2014-11-04 17:41:55 -0500
  - added File::LibMagic::FFI
  - update my dists to latest  

1.20      2014-11-03 06:04:51 -0500
  - update my dists to latest

1.19      2014-10-29 11:35:12 -0400
  - update my dists to latest

1.18      2014-10-29 08:01:21 -0400
  - update my dists to latest

1.17      2014-10-28 15:23:10 -0400
  - add FFI::TinyCC

1.16      2014-10-26 16:41:10 -0400
  - add FFI::CheckLib

1.15      2014-10-24 10:11:37 -0400
  - update my dists to latest

1.14      2014-10-14 08:56:30 -0400
  - update my dists to latest

1.12      2014-10-14 08:31:20 -0400
  - update my dists to latest

1.11      2014-10-13 07:29:44 -0400
  - update my dists to latest

1.10      2014-10-10 12:17:23 -0400
  - add App::cpangitify back to MSWin32
    where it works again
  - remove EditLine stuff that doesn't work on MSWin32 yet
  - update my dists to latest

1.09      2014-10-10 07:45:56 -0400
  - add Alien::patch

1.08      2014-10-09 08:37:25 -0400
  - update my dists to latest

1.07      2014-10-09 05:44:39 -0400
  - update my dists to latest

1.06      2014-10-08 14:48:47 -0400
  - added Alien::LibYAML
  - update my dists to latest  

1.05      2014-10-08 12:19:05 -0400
  - fix typo
