@@ -42,18 +42,15 @@ AnyEvent::Open3::Simple                        = 0.81
 AnyEvent::WebSocket::Client                    = 0.28
 App::cpangitify                                = 0.12
 App::RegexFileUtils                            = 0.06
-App::spaceless                                 = 0.05
+App::spaceless                                 = 0.06
 App::which_package                             = 0.05
 Archive::Ar::Libarchive                        = 2.05
 Archive::Libarchive::Any                       = 0.0801
 Archive::Libarchive::FFI                       = 0.0802
 Archive::Libarchive::XS                        = 0.0800
 Authen::Simple::PlugAuth                       = 0.01
-Clustericious                                  = 0.9940
-Clustericious::Admin                           = 0.24
-Clustericious::Client                          = 0.85
-Clustericious::Config                          = 0.30
-Clustericious::Log                             = 0.15
+Clustericious                                  = 0.9941
+Clustericious::Admin                           = 0.25
 Dist::Zilla::MintingProfile::Clustericious     = 0.02
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
 Dist::Zilla::Plugin::InsertExample             = 0.03
@@ -64,8 +61,8 @@ Dist::Zilla::Plugin::MathInt64                 = 0.07
 Dist::Zilla::Plugin::Template::Tiny            = 0.04
 Dist::Zilla::Plugin::TextTabs                  = 0.03
 Dist::Zilla::PluginBundle::ACPS                = 0.28
-Dist::Zilla::PluginBundle::Author::Plicease    = 1.60
-FFI::CheckLib                                  = 0.03
+Dist::Zilla::PluginBundle::Author::Plicease    = 1.61
+FFI::CheckLib                                  = 0.04
 FFI::TinyCC                                    = 0.09
 FFI::Util                                      = 0.08
 File::LibMagic::FFI                            = 0.02
@@ -73,9 +70,9 @@ File::Listing::Ftpcopy                         = 0.05
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.02
 Mojolicious::Plugin::Ident                     = 0.30
-Mojolicious::Plugin::TtRenderer                = 1.53
+Mojolicious::Plugin::TtRenderer                = 1.54
 Photography::EV                                = 0.05
-PkgConfig                                      = 0.08526
+PkgConfig                                      = 0.08626
 PlugAuth                                       = 0.28
 PlugAuth::Client::Tiny                         = 0.01
 PlugAuth::Plugin::AuthenSimple                 = 0.01
@@ -87,13 +84,13 @@ Shell::Guess                                   = 0.05
 String::Template                               = 0.12
 Term::EditLine2                                = 0.06
 Test::CChecker                                 = 0.05
-Test::Clustericious::Cluster                   = 0.17
+Test::Clustericious::Cluster                   = 0.18
 Test::Fixme                                    = 0.14
 URI::ws                                        = 0.03
 WebService::LiveJournal                        = 0.07
 Win32::Shortcut::Readlink                      = 0.02
 WWW::Bugzilla::BugTree                         = 0.03
-Yars                                           = 1.03
+Yars                                           = 1.04
 
 ; retired
 ;Dist::Zilla::Plugin::TwitterBootstrap          = 0.04
